--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 
-  Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
-*/
-
+/* Gradient background and general styles */
 .main {
   width: 100vw;
   min-height: 100vh;
@@ -70,7 +67,6 @@
 }
 
 /* Tailwind Styles */
-
 .app {
   @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
 }
@@ -113,4 +109,41 @@
 
 .summary_box {
   @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-4;
+}
+
+/* Dark Mode Styles */
+.dark-mode {
+  @apply bg-gray-900 text-gray-100;
+}
+
+.dark-mode .main:before {
+  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #1f2937 100%);
+}
+
+.dark-mode .gradient {
+  background-image: radial-gradient(
+      at 27% 37%,
+      hsla(215, 98%, 61%, 1) 0px,
+      transparent 0%
+    ),
+    radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
+    radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
+    radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
+    radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
+    radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
+    radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
+  filter: blur(100px) saturate(150%);
+  opacity: 0.15;
+}
+
+.dark-mode .url_input {
+  @apply bg-gray-800 border-gray-600 text-gray-300;
+}
+
+.dark-mode .link_card {
+  @apply bg-gray-800 border-gray-600;
+}
+
+.dark-mode .summary_box {
+  @apply bg-gray-700;
 }
